--- a/package.json
+++ b/package.json
@@ -32,10 +32,12 @@
     "react-router": "^1.0.0-rc3",
     "resolve-url-loader": "^1.3.0",
     "sass-loader": "^3.0.0",
+    "script-loader": "^0.6.1",
     "style-loader": "^0.13.0",
     "underscore": "^1.8.3",
     "url-loader": "^0.5.6",
     "webpack": "^1.12.2",
+    "webpack-cordova-plugin": "^0.1.5",
     "webpack-dev-server": "^1.12.1"
   },
   "dependencies": {
